Issue #2509890 by Dom., saki007ster, emma.maria: Fix footer menus in Bartik being vertically misaligned if you have +1 items

--- a/core/themes/bartik/css/components/site-footer.css
+++ b/core/themes/bartik/css/components/site-footer.css
@@ -74,7 +74,7 @@
   color: rgba(255, 255, 255, 0.65);
   font-size: 0.857em;
 }
-.site-footer .content .menu-item {
+.site-footer .menu-item {
   padding: 0;
 }
 .site-footer .content ol:not(.menu),
